Changed the handling of updating the driving points for the last road of the intersection. Instead of calling updateFBSEPoints, it is done manually. This is necessary, since it uses the last and first elements of the intersectionFillPoints